[tool.poetry]
name = "foocat_vk"
version = "0.1.0"
description = "Python package that eases the pain concatenating Pandas categoricals!"
authors = ["Varada Kolhatkar <kvarada@cs.ubc.ca>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.1"

[tool.poetry.dev-dependencies]
sphinx = "^2.4.3"
sphinxcontrib-napoleon = "^0.7"
pytest = "^5.3.5"
pytest-cov = "^2.8.1"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
